fetching basic data

--- a/problem2_stonk_88.ipynb
+++ b/problem2_stonk_88.ipynb
@@ -2,68 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "id": "cdf85ccc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching data, it may take a while. Please wait...\n",
-      "    ticker         timestamp          open          high           low  \\\n",
-      "0      VIX  2024-06-20 00:00  13827.119394  13827.119394  13408.115776   \n",
-      "1      VIX  2024-06-21 00:00  13446.207014  13560.480728  13331.933300   \n",
-      "2      VIX  2024-06-24 00:00  13331.933300  13408.115776  12646.291016   \n",
-      "3      VIX  2024-06-25 00:00  12798.655968  12912.929682  12684.382254   \n",
-      "4      VIX  2024-06-26 00:00  12798.655968  12989.112158  12722.473492   \n",
-      "..     ...               ...           ...           ...           ...   \n",
-      "295    VIX  2025-08-25 00:00  36450.000000  36450.000000  32300.000000   \n",
-      "296    VIX  2025-08-26 00:00  32450.000000  34850.000000  32300.000000   \n",
-      "297    VIX  2025-08-27 00:00  36050.000000  37250.000000  35500.000000   \n",
-      "298    VIX  2025-08-28 00:00  37000.000000  38450.000000  35850.000000   \n",
-      "299    VIX  2025-08-29 00:00  38800.000000  39250.000000  37650.000000   \n",
-      "\n",
-      "            close      volume          bu          sd            fb  \\\n",
-      "0    13408.115776  22943982.0   7197800.0  12330800.0  7.185900e+08   \n",
-      "1    13331.933300  15263192.0   5407200.0   8209500.0  3.315100e+08   \n",
-      "2    12722.473492  33202065.0  10436100.0  21621600.0  8.985758e+09   \n",
-      "3    12798.655968  10808675.0   4951600.0   5555400.0  1.555384e+10   \n",
-      "4    12798.655968   7792678.0   3323200.0   3934700.0  4.035000e+07   \n",
-      "..            ...         ...         ...         ...           ...   \n",
-      "295  32600.000000  35685019.0  12967300.0  18033900.0  1.334201e+11   \n",
-      "296  34850.000000  32139891.0  21204000.0  10208700.0  1.880622e+11   \n",
-      "297  36850.000000  61205150.0  34556000.0  24577700.0  1.723730e+11   \n",
-      "298  38400.000000  58131489.0  29474800.0  26040600.0  1.229942e+11   \n",
-      "299  37700.000000  64723915.0  21125700.0  36599400.0  3.331726e+10   \n",
-      "\n",
-      "               fs            fn  \n",
-      "0    1.376472e+10 -1.304614e+10  \n",
-      "1    2.359038e+10 -2.325888e+10  \n",
-      "2    7.573420e+09  1.412338e+09  \n",
-      "3    7.094092e+09  8.459743e+09  \n",
-      "4    4.081301e+09 -4.040951e+09  \n",
-      "..            ...           ...  \n",
-      "295  2.136047e+11 -8.018464e+10  \n",
-      "296  4.245736e+10  1.456049e+11  \n",
-      "297  8.925047e+10  8.312253e+10  \n",
-      "298  1.879487e+11 -6.495450e+10  \n",
-      "299  3.708742e+11 -3.375570e+11  \n",
-      "\n",
-      "[300 rows x 12 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "from dotenv import load_dotenv\n",
     "from FiinQuantX import FiinSession\n",
-    "\n",
+    "from constant import *\n",
     "\n",
     "load_dotenv()\n",
     "username = os.getenv('username')\n",
     "password = os.getenv('password')\n",
+    "\n",
     "\n",
     "\n",
     "client = FiinSession(\n",
@@ -71,20 +24,90 @@
     "    password=password,\n",
     ").login()\n",
     "\n",
-    "data = data = client.Fetch_Trading_Data(\n",
-    "    realtime = False, \n",
-    "    tickers = 'VIX',\n",
-    "    fields = ['open', 'high', 'low', 'close', 'volume', 'bu','sd', 'fb', 'fs', 'fn'], \n",
-    "    by = '1d',\n",
-    "    period = 300,\n",
-    ").get_data()\n",
+    "tickers = UPCOMINDEX # list of tickers: ['UPCOMINDEX',VNINDEX,HNXINDEX]\n",
     "\n",
-    "print(data)"
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
+   "id": "3b391532",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    data = client.Fetch_Trading_Data(\n",
+    "        realtime = False, \n",
+    "        tickers = tickers,\n",
+    "        fields = ['open', 'high', 'low', 'close', 'volume', 'bu','sd', 'fb', 'fs', 'fn'], \n",
+    "        period = 30,\n",
+    "        by = '1d',\n",
+    "    )\n",
+    "except Exception as e:\n",
+    "    print(\"Error fetching data:\", e)\n",
+    "    data = []  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9906955c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data)\n",
+    "df.to_csv('upcomindex_30days.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d3f0c21",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "argument of type 'NoneType' is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m      3\u001b[39m client = FiinSession(\n\u001b[32m      4\u001b[39m     username=username,\n\u001b[32m      5\u001b[39m     password=password,\n\u001b[32m      6\u001b[39m ).login()\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m fs_dict = \u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mFundamentalAnalysis\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_financeStatement\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtickers\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mHPG\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m   \u001b[49m\u001b[38;5;66;43;03m# ✅ Luôn truyền dưới dạng list\u001b[39;49;00m\n\u001b[32m     10\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstatement\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mbalancesheet\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m    \u001b[49m\u001b[43myears\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m2024\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43m    \u001b[49m\u001b[43mquarters\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     13\u001b[39m \u001b[43m    \u001b[49m\u001b[43maudited\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mtype\u001b[39;49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mconsolidated\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfields\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mAssets\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m     16\u001b[39m \u001b[43m       \u001b[49m\u001b[38;5;66;43;03m# hoặc chỉ định ví dụ: [\"assets.totalAssets\",\"equity.totalEquity\"]\u001b[39;49;00m\n\u001b[32m     17\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     19\u001b[39m \u001b[38;5;28mprint\u001b[39m(json.dumps(fs_dict, indent=\u001b[32m4\u001b[39m))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m<string>:217\u001b[39m, in \u001b[36mget_financeStatement\u001b[39m\u001b[34m(self, statement, tickers, years, type, audited, quarters, fields)\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m<string>:136\u001b[39m, in \u001b[36m__process_statement\u001b[39m\u001b[34m(self, statement, tickers, years, type, audited, quarters, fields)\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m<string>:80\u001b[39m, in \u001b[36m__fetch_finance_data\u001b[39m\u001b[34m(self, statement, tickers, years, audited, type, quarters, sections_str)\u001b[39m\n",
+      "\u001b[31mTypeError\u001b[39m: argument of type 'NoneType' is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "client = FiinSession(\n",
+    "    username=username,\n",
+    "    password=password,\n",
+    ").login()\n",
+    "\n",
+    "tickers = ['HPG']\n",
+    "\n",
+    "fs_dict = client.FundamentalAnalysis().get_financeStatement(\n",
+    "    tickers=tickers,\n",
+    "    statement=\"balancesheet\",\n",
+    "    years=[2024],\n",
+    "    quarters=[4],\n",
+    "    audited=True,\n",
+    "    type=\"consolidated\",\n",
+    "    fields=[\"CurrentAssets\"]\n",
+    ")\n",
+    "\n",
+    "print(json.dumps(fs_dict, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "43f39d6c",
    "metadata": {},
    "outputs": [
@@ -92,20 +115,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            close   sma_20      sma_50      sma_200\n",
-      "0    13408.115776      NaN         NaN          NaN\n",
-      "1    13331.933300      NaN         NaN          NaN\n",
-      "2    12722.473492      NaN         NaN          NaN\n",
-      "3    12798.655968      NaN         NaN          NaN\n",
-      "4    12798.655968      NaN         NaN          NaN\n",
-      "..            ...      ...         ...          ...\n",
-      "295  32600.000000  30582.5  21790.4812  13529.02002\n",
-      "296  34850.000000  31127.5  22237.0000  13652.79282\n",
-      "297  36850.000000  31690.0  22722.0000  13785.61322\n",
-      "298  38400.000000  32245.0  23241.0000  13926.42172\n",
-      "299  37700.000000  32815.0  23744.0000  14064.20642\n",
+      "            close   sma_20   sma_50       sma_200\n",
+      "0    14890.248248      NaN      NaN           NaN\n",
+      "1    15077.841927      NaN      NaN           NaN\n",
+      "2    15007.494298      NaN      NaN           NaN\n",
+      "3    15007.494298      NaN      NaN           NaN\n",
+      "4    15030.943507      NaN      NaN           NaN\n",
+      "..            ...      ...      ...           ...\n",
+      "995  26200.000000  25212.5  23345.0  21625.276500\n",
+      "996  27350.000000  25442.5  23468.0  21658.633375\n",
+      "997  27650.000000  25675.0  23595.0  21692.028125\n",
+      "998  27550.000000  25902.5  23720.0  21724.922875\n",
+      "999  27800.000000  26142.5  23847.0  21759.903125\n",
       "\n",
-      "[300 rows x 4 columns]\n"
+      "[1000 rows x 4 columns]\n"
      ]
     }
    ],
@@ -119,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "143d77b1",
    "metadata": {},
    "outputs": [
@@ -127,10 +150,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[BUY] Date: 2024-09-30 00:00, Shares: 8.0, Price: 11428.8, Cash left: 8569.600000000006\n",
-      "[SELL] Date: 89, Shares: 8.0, Price: 10571.64, Cash after sale: 93142.72\n",
-      "[BUY] Date: 2025-02-19 00:00, Shares: 8.0, Price: 10666.88, Cash left: 7807.680000000008\n",
-      "Final Portfolio Value: 309407.68\n"
+      "[BUY] Date: 2021-11-08 00:00, Shares: 6.0, Price: 15664.07217312, Cash left: 6015.566961280012\n",
+      "[SELL] Date: 2021-12-27 00:00, Shares: 6.0, Price: 15546.82612392, Cash after sale: 99296.52370480001\n",
+      "[BUY] Date: 2022-01-04 00:00, Shares: 6.0, Price: 16133.05636992, Cash left: 2498.185485280017\n",
+      "[SELL] Date: 2022-01-06 00:00, Shares: 6.0, Price: 15828.216642, Cash after sale: 97467.48533728001\n",
+      "[BUY] Date: 2022-01-24 00:00, Shares: 6.0, Price: 16109.60716008, Cash left: 809.8423768000066\n",
+      "[SELL] Date: 2022-03-11 00:00, Shares: 6.0, Price: 15335.78323536, Cash after sale: 92824.54178896\n",
+      "[BUY] Date: 2022-07-21 00:00, Shares: 6.0, Price: 14450.5755639, Cash left: 6121.088405560004\n",
+      "[SELL] Date: 2022-07-25 00:00, Shares: 6.0, Price: 14098.8374163, Cash after sale: 90714.11290336002\n",
+      "[BUY] Date: 2022-08-08 00:00, Shares: 6.0, Price: 14509.1985885, Cash left: 3658.921372360026\n",
+      "[SELL] Date: 2022-09-16 00:00, Shares: 6.0, Price: 13571.2301949, Cash after sale: 85086.30254176003\n",
+      "[BUY] Date: 2022-12-02 00:00, Shares: 6.0, Price: 13776.410781, Cash left: 2427.8378557600226\n",
+      "[SELL] Date: 2023-03-22 00:00, Shares: 6.0, Price: 14157.4604409, Cash after sale: 87372.60050116002\n",
+      "[BUY] Date: 2023-04-13 00:00, Shares: 5.0, Price: 14626.4446377, Cash left: 14240.377312660014\n",
+      "[SELL] Date: 2023-05-08 00:00, Shares: 5.0, Price: 14626.4446377, Cash after sale: 87372.60050116002\n",
+      "[BUY] Date: 2023-05-23 00:00, Shares: 5.0, Price: 14860.9367361, Cash left: 13067.916820660015\n",
+      "[SELL] Date: 2023-09-13 00:00, Shares: 5.0, Price: 15826.041, Cash after sale: 92198.12182066002\n",
+      "[BUY] Date: 2023-11-21 00:00, Shares: 5.0, Price: 15861.132, Cash left: 12892.461820660013\n",
+      "[SELL] Date: 2024-04-22 00:00, Shares: 5.0, Price: 18808.776, Cash after sale: 106936.34182066002\n",
+      "[BUY] Date: 2024-05-22 00:00, Shares: 5.0, Price: 19615.869, Cash left: 8856.996820660017\n",
+      "[SELL] Date: 2024-07-17 00:00, Shares: 5.0, Price: 20469.75, Cash after sale: 111205.74682066002\n",
+      "[BUY] Date: 2024-09-06 00:00, Shares: 5.0, Price: 20553.3, Cash left: 8439.246820660017\n",
+      "[SELL] Date: 2024-11-12 00:00, Shares: 5.0, Price: 20762.175, Cash after sale: 112250.12182066002\n",
+      "[BUY] Date: 2024-12-19 00:00, Shares: 5.0, Price: 20720.4, Cash left: 8648.121820660017\n",
+      "[SELL] Date: 2025-02-03 00:00, Shares: 5.0, Price: 20971.05, Cash after sale: 113503.37182066002\n",
+      "[BUY] Date: 2025-02-14 00:00, Shares: 5.0, Price: 21514.125, Cash left: 5932.746820660017\n",
+      "[SELL] Date: 2025-04-08 00:00, Shares: 5.0, Price: 18506.325, Cash after sale: 98464.37182066002\n",
+      "[BUY] Date: 2025-05-29 00:00, Shares: 4.0, Price: 21300.0, Cash left: 13264.371820660017\n",
+      "Final Portfolio Value: 124464.37182066002\n"
      ]
     }
    ],
