fetching basic data from 2018 to 2022

--- a/problem2_stonk_88.ipynb
+++ b/problem2_stonk_88.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "cdf85ccc",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
     "    password=password,\n",
     ").login()\n",
     "\n",
-    "tickers = UPCOMINDEX # list of tickers: ['UPCOMINDEX',VNINDEX,HNXINDEX]\n",
+    "tickers = VNINDEX # list of tickers: ['UPCOMINDEX',VNINDEX,HNXINDEX]\n",
     "\n",
     "\n",
     "\n"
@@ -33,21 +33,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b391532",
+   "id": "715a4782",
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    data = client.Fetch_Trading_Data(\n",
-    "        realtime = False, \n",
-    "        tickers = tickers,\n",
-    "        fields = ['open', 'high', 'low', 'close', 'volume', 'bu','sd', 'fb', 'fs', 'fn'], \n",
-    "        period = 30,\n",
-    "        by = '1d',\n",
-    "    )\n",
-    "except Exception as e:\n",
-    "    print(\"Error fetching data:\", e)\n",
-    "    data = []  "
+    "data = client.Fetch_Trading_Data(\n",
+    "    realtime = False, \n",
+    "    tickers = tickers,\n",
+    "    fields = ['open'], \n",
+    "    from_date='2023-10-01 9:00',\n",
+    "    to_date='2023-11-01 15:00',\n",
+    "    by = '1d',\n",
+    ").get_data()\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df.to_csv('vnindex_.csv', index=False)"
    ]
   },
   {
@@ -56,54 +56,21 @@
    "id": "9906955c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df = pd.DataFrame(data)\n",
-    "df.to_csv('upcomindex_30days.csv', index=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2d3f0c21",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "argument of type 'NoneType' is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m      3\u001b[39m client = FiinSession(\n\u001b[32m      4\u001b[39m     username=username,\n\u001b[32m      5\u001b[39m     password=password,\n\u001b[32m      6\u001b[39m ).login()\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m fs_dict = \u001b[43mclient\u001b[49m\u001b[43m.\u001b[49m\u001b[43mFundamentalAnalysis\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_financeStatement\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m      9\u001b[39m \u001b[43m    \u001b[49m\u001b[43mtickers\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mHPG\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m   \u001b[49m\u001b[38;5;66;43;03m# ✅ Luôn truyền dưới dạng list\u001b[39;49;00m\n\u001b[32m     10\u001b[39m \u001b[43m    \u001b[49m\u001b[43mstatement\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mbalancesheet\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     11\u001b[39m \u001b[43m    \u001b[49m\u001b[43myears\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m2024\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     12\u001b[39m \u001b[43m    \u001b[49m\u001b[43mquarters\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m     13\u001b[39m \u001b[43m    \u001b[49m\u001b[43maudited\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[32m     14\u001b[39m \u001b[43m    \u001b[49m\u001b[38;5;28;43mtype\u001b[39;49m\u001b[43m=\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mconsolidated\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[32m     15\u001b[39m \u001b[43m    \u001b[49m\u001b[43mfields\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mAssets\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m     16\u001b[39m \u001b[43m       \u001b[49m\u001b[38;5;66;43;03m# hoặc chỉ định ví dụ: [\"assets.totalAssets\",\"equity.totalEquity\"]\u001b[39;49;00m\n\u001b[32m     17\u001b[39m \u001b[43m)\u001b[49m\n\u001b[32m     19\u001b[39m \u001b[38;5;28mprint\u001b[39m(json.dumps(fs_dict, indent=\u001b[32m4\u001b[39m))\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m<string>:217\u001b[39m, in \u001b[36mget_financeStatement\u001b[39m\u001b[34m(self, statement, tickers, years, type, audited, quarters, fields)\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m<string>:136\u001b[39m, in \u001b[36m__process_statement\u001b[39m\u001b[34m(self, statement, tickers, years, type, audited, quarters, fields)\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m<string>:80\u001b[39m, in \u001b[36m__fetch_finance_data\u001b[39m\u001b[34m(self, statement, tickers, years, audited, type, quarters, sections_str)\u001b[39m\n",
-      "\u001b[31mTypeError\u001b[39m: argument of type 'NoneType' is not iterable"
-     ]
-    }
-   ],
-   "source": [
-    "import json\n",
-    "\n",
-    "client = FiinSession(\n",
-    "    username=username,\n",
-    "    password=password,\n",
-    ").login()\n",
-    "\n",
-    "tickers = ['HPG']\n",
-    "\n",
-    "fs_dict = client.FundamentalAnalysis().get_financeStatement(\n",
-    "    tickers=tickers,\n",
-    "    statement=\"balancesheet\",\n",
-    "    years=[2024],\n",
-    "    quarters=[4],\n",
-    "    audited=True,\n",
-    "    type=\"consolidated\",\n",
-    "    fields=[\"CurrentAssets\"]\n",
-    ")\n",
-    "\n",
-    "print(json.dumps(fs_dict, indent=4))"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c67cd3b6",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
