fetch more data

--- a/problem2_stonk_88.ipynb
+++ b/problem2_stonk_88.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "cdf85ccc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['CCC', 'SBG', 'FUCTVGF3', 'FUEIP100', 'GMH', 'FUEKIV30', 'NO1', 'FUCTVGF4', 'RYG', 'FUEDCMID', 'FUEKIVFS', 'FUEMAVND', 'FUEFCV50', 'FUEBFVND', 'FUCTVGF5', 'FUEKIVND', 'FUEABVND', 'FUETCC50', 'FUETPVND', 'AAA', 'AAM', 'AAT', 'ABR', 'ABS', 'ABT', 'ACB', 'ACC', 'ACL', 'ADP', 'AGR', 'AGG', 'ACG', 'ATP', 'ANV', 'APG', 'APH', 'HII', 'ASG', 'ASM', 'ASP', 'BAF', 'BBC', 'BCE', 'BCG', 'BFC', 'BHN', 'BIC', 'BID', 'BCM', 'DBD', 'BWE', 'BKG', 'BMC', 'BMI', 'BMP', 'BRC', 'BSI', 'BSR', 'BTP', 'BTT', 'BVH', 'TNH', 'C32', 'C47', 'CCI', 'CCL', 'CDC', 'CRE', 'STK', 'CHP', 'CIG', 'CII', 'CKG', 'CLC', 'ADG', 'CLL', 'CLW', 'CMG', 'CMV', 'CMX', 'CNG', 'COM', 'CRC', 'CSM', 'CSV', 'CTD', 'CTF', 'CTG', 'CTI', 'ICT', 'CTR', 'CTS', 'CVT', 'D2D', 'DAH', 'ADS', 'DPG', 'DBC', 'DBT', 'DC4', 'DCL', 'DCM', 'DGC', 'DGW', 'DHA', 'DHC', 'DHG', 'DHM', 'TTE', 'DIG', 'DLG', 'DMC', 'DSC', 'DSE', 'DPM', 'DPR', 'DQC', 'DRC', 'DRH', 'DRL', 'DSN', 'DTA', 'DTL', 'DTT', 'DVP', 'DXG', 'DXS', 'DXV', 'FUESSV50', 'E1VFVN30', 'EIB', 'ELC', 'FUESSVFL', 'EVE', 'EVG', 'EVF', 'FCM', 'FCN', 'FDC', 'FIR', 'FIT', 'FMC', 'FPT', 'FRT', 'FTS', 'FUEMAV30', 'FUESSV30', 'FUEVFVND', 'FUEVN100', 'GAS', 'GDT', 'GEX', 'GEE', 'PGV', 'GIL', 'GEG', 'GMD', 'GSP', 'GTA', 'HAG', 'HAH', 'HPX', 'HID', 'HHV', 'HAP', 'HAR', 'HAS', 'HAX', 'HCD', 'HCM', 'HDB', 'HDC', 'HDG', 'HHP', 'HHS', 'TCH', 'HSL', 'HMC', 'HNA', 'HPG', 'HQC', 'HRC', 'HSG', 'HT1', 'HTG', 'HTI', 'HTN', 'HTL', 'HTV', 'HU1', 'CRV', 'HVH', 'HVX', 'ILB', 'IDI', 'IJC', 'IMP', 'ITC', 'ITD', 'JVC', 'KBC', 'KDC', 'KDH', 'KHG', 'KHP', 'KMR', 'KOS', 'KSB', 'L10', 'LAF', 'LBM', 'LCG', 'LDG', 'LGC', 'LGL', 'LHG', 'LIX', 'LM8', 'LSS', 'LPB', 'MBB', 'MCM', 'MCP', 'MDG', 'MHC', 'MIG', 'MSB', 'MSN', 'MWG', 'NAB', 'NAF', 'NAV', 'NBB', 'NCT', 'NHA', 'NHH', 'VHM', 'NHT', 'NKG', 'NLG', 'NNC', 'NVL', 'NSC', 'NT2', 'NTL', 'NVT', 'OCB', 'OGC', 'OPC', 'ORS', 'PAC', 'PAN', 'PC1', 'PDN', 'PDR', 'PET', 'PLX', 'PGC', 'PGD', 'PGI', 'PLP', 'PHC', 'PHR', 'PIT', 'PJT', 'PMG', 'PNC', 'PNJ', 'PPC', 'PTB', 'PTC', 'PTL', 'DAT', 'PVD', 'POW', 'PVT', 'PVP', 'QCG', 'QNP', 'RAL', 'REE', 'SGN', 'SAM', 'SAV', 'SBA', 'SAB', 'SBT', 'SC5', 'SCR', 'SCS', 'SSB', 'SFC', 'SFG', 'SFI', 'SGR', 'SGT', 'SIP', 'SHA', 'SHB', 'MSH', 'SHI', 'SHP', 'SBV', 'SZC', 'SJD', 'SJS', 'SKG', 'SMA', 'SMB', 'SMC', 'SPM', 'SRC', 'SRF', 'S4A', 'SSC', 'SSI', 'ST8', 'STB', 'STG', 'SVC', 'SVD', 'SVI', 'SVT', 'SZL', 'AST', 'TAL', 'TBC', 'TCB', 'TCL', 'TCM', 'TCO', 'TCR', 'FUCVREIT', 'TCI', 'TCT', 'TDC', 'TDG', 'TDH', 'TDM', 'TDP', 'TDW', 'TEG', 'THG', 'TIP', 'TIX', 'TLD', 'TLG', 'TLH', 'TMP', 'TMS', 'TMT', 'TN1', 'TNC', 'TNI', 'TNT', 'TPB', 'TPC', 'TRA', 'TCD', 'TRC', 'TVB', 'TSC', 'TTA', 'TTF', 'HUB', 'TV2', 'TVS', 'TYA', 'UIC', 'VAB', 'VAF', 'VCA', 'VCB', 'VCF', 'VCG', 'VCI', 'VDS', 'VFG', 'VGC', 'VHC', 'VIB', 'VIC', 'TVT', 'VID', 'VDP', 'VJC', 'VIP', 'VPS', 'VIX', 'VMD', 'HVN', 'VND', 'VNE', 'VNG', 'VNL', 'VNM', 'VPD', 'GVR', 'VNS', 'VOS', 'VPB', 'VPG', 'VPH', 'VPL', 'VPI', 'VRC', 'VRE', 'VSC', 'VSH', 'VSI', 'VTB', 'VTO', 'VTP', 'YBM', 'YEG']\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -24,47 +32,40 @@
     "    password=password,\n",
     ").login()\n",
     "\n",
-    "tickers = VNINDEX # list of tickers: ['UPCOMINDEX',VNINDEX,HNXINDEX]\n",
+    "#tickers = VNINDEX # list of tickers: ['UPCOMINDEX',VNINDEX,HNXINDEX]\n",
     "\n",
+    "tickers =client.TickerList(ticker=\"VNINDEX\")\n",
     "\n",
-    "\n"
+    "print(tickers)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "715a4782",
+   "execution_count": 33,
+   "id": "01be7963",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching data, it may take a while. Please wait...\n"
+     ]
+    }
+   ],
    "source": [
     "data = client.Fetch_Trading_Data(\n",
     "    realtime = False, \n",
     "    tickers = tickers,\n",
-    "    fields = ['open'], \n",
-    "    from_date='2023-10-01 9:00',\n",
-    "    to_date='2023-11-01 15:00',\n",
+    "    fields = ['open', 'high', 'low', 'close', 'volume', 'bu','sd', 'fb', 'fs', 'fn'], \n",
+    "    from_date='2018-10-01',\n",
+    "    to_date='2022-10-08',\n",
     "    by = '1d',\n",
     ").get_data()\n",
     "\n",
     "df = pd.DataFrame(data)\n",
     "df.to_csv('vnindex_.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9906955c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d3f0c21",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -74,37 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
    "id": "43f39d6c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            close   sma_20   sma_50       sma_200\n",
-      "0    14890.248248      NaN      NaN           NaN\n",
-      "1    15077.841927      NaN      NaN           NaN\n",
-      "2    15007.494298      NaN      NaN           NaN\n",
-      "3    15007.494298      NaN      NaN           NaN\n",
-      "4    15030.943507      NaN      NaN           NaN\n",
-      "..            ...      ...      ...           ...\n",
-      "995  26200.000000  25212.5  23345.0  21625.276500\n",
-      "996  27350.000000  25442.5  23468.0  21658.633375\n",
-      "997  27650.000000  25675.0  23595.0  21692.028125\n",
-      "998  27550.000000  25902.5  23720.0  21724.922875\n",
-      "999  27800.000000  26142.5  23847.0  21759.903125\n",
-      "\n",
-      "[1000 rows x 4 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fi = client.FiinIndicator()\n",
-    "data['sma_20'] = fi.sma(data['close'], window = 20)\n",
-    "data['sma_50'] = fi.sma(data['close'], window = 50)\n",
-    "data['sma_200'] = fi.sma(data['close'], window = 200)\n",
-    "print(data[['close', 'sma_20', 'sma_50', 'sma_200']])"
+    "df['sma_20'] = fi.sma(df['close'], window = 20)\n",
+    "df['sma_50'] = fi.sma(df['close'], window = 50)\n",
+    "df['sma_200'] = fi.sma(df['close'], window = 200)\n",
+    "df.to_csv('vnindex_.csv', index=False)"
    ]
   },
   {
@@ -193,8 +173,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "b148ae42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "415\n"
+     ]
+    }
+   ],
+   "source": [
+    "from constant import *\n",
+    "print(len(VNINDEX))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f78d4cf",
    "metadata": {},
    "outputs": [],
    "source": []
